# input file for automake

bin_PROGRAMS = edlin
edlin_SOURCES = defines.c defines.h dynarray.h dynstr.c dynstr.h \
                edlib.c edlib.h edlin.c msgs.h
EXTRA_DIST = config-h.bc Makefile.bc edlin.htm edlin.tgt edlin.wpj \
	     msgs-da.h msgs-de.h msgs-en.h msgs-eo.h msgs-es.h msgs-eu.h \
             msgs-fi.h msgs-fr.h msgs-is.h msgs-it.h msgs-la.h \
             msgs-nl.h msgs-no.h msgs-pl.h msgs-pt.h msgs-sv.h msgs-de2.h \
             msgs-ja.h edlin-ja.htm edlin-ja.txt \
             catgets.c kitten.c kitten.h nl_types.h \
             malloc.c realloc.c kitten msgscats.h config-h.ow \
             kit2msgs.c ow.bat
