dnl Process this file with autoconf to produce a configure script.
AC_INIT(edlin, 2.10c)
AM_INIT_AUTOMAKE(edlin, 2.10c)
AC_CONFIG_SRCDIR([edlin.c])
AM_CONFIG_HEADER([config.h])

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -le:
AC_CHECK_LIB(e, main)
dnl Replace `main' with a function in -links:
AC_CHECK_LIB(inks, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(io.h jctype.h limits.h strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS(access iskanji link memchr memmove memset rename strchr unlink)

AC_OUTPUT(Makefile)
